user kauthentication added and registartion of new users successful

--- a/gram_app/templates/gram_app/index.html
+++ b/gram_app/templates/gram_app/index.html
@@ -1,7 +1,9 @@
 {%extends 'base.html' %}
-
 {%block body%}
+{%include 'nav.html' %}
+<div class="container">
+    homepage
+</div>
 
-<h1>Hello</h1>
 
 {%endblock%}
