--- a/gram_app/templates/gram_app/login-register.html
+++ b/gram_app/templates/gram_app/login-register.html
@@ -1,5 +1,6 @@
 {%extends 'base.html' %}
 {%load static%}
+{% load socialaccount %}
 {%block body%}
 {%if page == 'login'%}
 <div class="container">
@@ -8,7 +9,7 @@
             <img class='img-fluid' src="{%static 'assets/login.jpg'%}" alt="login page image">
         </div>
         <div class="col-md-6">
-            <div class="pt-5 mt-5">
+            <div class="mt-5">
                 <form action="" class="form-control p-5" method="POST">
                     {%csrf_token%}
 
@@ -31,11 +32,23 @@
                         <input type="password" name="password" class="form-control" id="password"
                             placeholder="name@example.com">
                     </div>
-                    <input type="submit" value="Login" class="btn btn-login">
-                    <div class="mb-3">
-                        <p class="text-center">-------OR------</p>
-                        <a href="">Login with Google</a>
+                    <div class="row mt-2 mb-3">
+                        <div class="col-md-6">
+                            <input type="submit" value="Login" class="btn btn-login">
+                        </div>
+                        <div class="col-md-6 pt-2">
+                            <a href=""> Forgot your password? </a>
+                           
+                        </div>
+                        
+                       
                     </div>
+                    
+                    <div class="mb-3">
+                        <hr class="mt-3">
+                        <a href="{%provider_login_url 'google'%}">Login with Google</a>
+                    </div>
+
                 </form>
             </div>
             <div class="pt-2">
@@ -55,7 +68,7 @@
             <img class='img-fluid' src="{%static 'assets/register.jpg'%}" alt="register page image">
         </div>
         <div class="col-md-6">
-            <div class="pt-5 mt-5">
+            <div class="mt-5">
                 <form action="" class="form-control p-5" method="POST">
                     {%csrf_token%}
                 
@@ -74,10 +87,14 @@
                     <p class="text-center text-secondary pt-3">
                         <small>
                             By signing up, you agree to our <a href="">Terms</a>, <a href="">Data Policy</a> and <a href="">Cookies Policy.</a>
-                        </small>
-                      
+                        </small> 
                     </p>
                 </form>
+                <div class="pt-2">
+                    <p class="form-control ps-5 pt-3 pb-3 pe-5">
+                        Already have an account?  <a href="{%url 'login' %}">Login</a>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
