--- a/templates/nav.html
+++ b/templates/nav.html
@@ -27,7 +27,9 @@
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item" href="{%url 'logout'%}">Logout</a></li>
+                        {%if request.user.is_authenticated%}
+                        <li><a class="dropdown-item" href="{%url 'logout' %}">Logout</a></li>
+                        {%endif%}
                     </ul>
                 </li>
             </ul>
