--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,8 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Fredoka', sans-serif;;
+    font-family: 'Fredoka', sans-serif;
+    background-color: #fafafa;
 }
 
 .btn-login{
@@ -20,4 +21,23 @@ body{
 
 .logo{
     font-family: 'Pacifico', cursive;
+}
+.bg{
+    background-color: #fff !important;
+}
+.profile-img{
+    width: 5%;
+}
+.main-img{
+    width: 100%;
+    height: 80%;
+}
+textarea {
+    border: none;
+    background-color: transparent;
+    resize: none;
+    outline: none;
+}
+.view-comments{
+    cursor: pointer;
 }
