--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light p-2">
+<nav class="navbar navbar-expand-lg navbar-light bg p-2">
     <div class="container-fluid">
         <a class="navbar-brand logo ps-5 pe-5 ms-5 me-5 fs-3" href="#">Gram</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
