--- a/gram_app/templates/gram_app/login-register.html
+++ b/gram_app/templates/gram_app/login-register.html
@@ -3,7 +3,7 @@
 {% load socialaccount %}
 {%block body%}
 {%if page == 'login'%}
-<div class="container">
+<div class="container-fluid white">
     <div class="row">
         <div class="col-md-6">
             <img class='img-fluid' src="{%static 'assets/login.jpg'%}" alt="login page image">
@@ -62,7 +62,7 @@
 {%endif%}
 
 {%if page == 'register'%}
-<div class="container">
+<div class="container-fluid white">
     <div class="row">
         <div class="col-md-6">
             <img class='img-fluid' src="{%static 'assets/register.jpg'%}" alt="register page image">
