--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg p-2">
     <div class="container-fluid">
 
-                <a class="navbar-brand logo ps-5 pe-5 ms-5 me-5 fs-3" href="#">Gram</a>
+                <a class="navbar-brand logo ps-5 pe-5 ms-5 me-5 fs-3" href="{%url 'home' %}">Gram</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -15,9 +15,6 @@
 
             <div class="collapse navbar-collapse ps-5 pe-5 ms-5 me-5" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{%url 'home' %}">Home</a>
-                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
