--- a/gram_app/templates/gram_app/comments.html
+++ b/gram_app/templates/gram_app/comments.html
@@ -1,1 +1,31 @@
+{% extends 'base.html' %}
 
+{% block body %}
+<div class="container" style="margin-top:7%;">
+    <div class="card">
+        <div class="row">
+            <div class="col-md-8 ml-3"
+                 style="background-image:url('{{ image.image.url }}');;background-size: contain; background-repeat:no-repeat">
+                <img src="{{image.image.url}}" style="visibility: hidden;" class="card-img" width="100%"/>
+            </div>
+            <div class="col-md-3 mt-2">
+                <img src="{{image.owner.profile_photo.url}}" class="rounded-circle border ml-3 mt-2  mr-3"
+                     alt="{{image.owner}}" width="35" height="35">
+                <hr style="width:96%">
+                {% for comment in image.comments.all %}
+                <div class="comment">
+                    <div class="ml-2"><strong>{{ comment.owner}}</strong> <span class="text-secondary">{{ comment.comment }}</span>
+                    </div>
+                </div>
+                {% empty %}
+                <p class="ml-3">No comments here yet</p>
+                {% endfor %}
+                <hr style="width:96%; margin-top:84%;">
+                <div id="like-section">
+                </div>
+            </div>
+            <div class="col-md-1"></div>
+        </div>
+    </div>
+</div>
+{% endblock %}
