--- a/gram_app/templates/gram_app/index.html
+++ b/gram_app/templates/gram_app/index.html
@@ -16,44 +16,29 @@
                     <div class="p-2">
 
                         <img src="{{image.image.url}}" class="main-img card-img-top" alt="Image">
-                        <h5 class="">{{image.image_likes.total_likes}}</h5>
+                        <h6 class="mt-3">{{image.likes}} likes</h6>
                         <p class="">
                             <strong>{{image.owner |lower}}</strong> &nbsp;{{image.image_caption |lower}}
                         </p>
                         <div class="mb-2">
-                            <p data-toggle="modal" data-target="#{{image.id}}" class="text-muted text-decoration-none view-comments">
+                            <a class="text-muted text-decoration-none view-comments" href="{%url 'comments' image.id%}">
                                 view comments
-                            </p>
-                        </div>
-
-                        <div class="modal fade" id="{{image.id}}" tabindex="-1" aria-labelledby="exampleModalLabel"
-                            aria-hidden="true">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <small class="modal-title" id="exampleModalLabel">
-                                            <strong>{{image.owner |lower}}</strong>
-                                        </small>
-                                        <a class='text-light' href="{{request.META.HTTP_REFERER}}">
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                        </a>
-                                    </div>
-                                    <div class="modal-body">
-                                        {{comment.comment}}
-                                    </div>
-                                </div>
-                            </div>
+                            </a>
                         </div>
 
                         <div>
                             <small class="text-muted">{{image.created |timesince}}</small>
                         </div>
+
+                        <!-- COMMENT SECTION -->
                         <div class="card-footer bg mt-3">
                             <form action="" method="POST">
                                 {%csrf_token%}
-                                <textarea name="comment" id="" type='text' placeholder="leave a comment"></textarea>
+                                <textarea name="comment" id="comment" type='text' placeholder="leave a comment"></textarea>
+                                <input type="submit" value='post' name="" id="" class="btn">
                             </form>
                         </div>
+
                     </div>
                 </div>
                 {%endfor%}
