--- a/gram_app/templates/gram_app/comments.html
+++ b/gram_app/templates/gram_app/comments.html
@@ -1,27 +1,45 @@
 {% extends 'base.html' %}
 
 {% block body %}
+{%include 'nav.html' %}
 <div class="container" style="margin-top:7%;">
     <div class="card">
         <div class="row">
             <div class="col-md-8 ml-3"
-                 style="background-image:url('{{ image.image.url }}');;background-size: contain; background-repeat:no-repeat">
+                style="background-image:url('{{ image.image.url }}');background-size: contain; background-repeat:no-repeat">
                 <img src="{{image.image.url}}" style="visibility: hidden;" class="card-img" width="100%"/>
             </div>
             <div class="col-md-3 mt-2">
                 <img src="{{image.owner.profile_photo.url}}" class="rounded-circle border ml-3 mt-2  mr-3"
-                     alt="{{image.owner}}" width="35" height="35">
+                    alt="{{image.owner}}" width="35" height="35">
                 <hr style="width:96%">
                 {% for comment in image.comments.all %}
                 <div class="comment">
-                    <div class="ml-2"><strong>{{ comment.owner}}</strong> <span class="text-secondary">{{ comment.comment }}</span>
+                    <div class="ml-2">
+                        <strong>{{ comment.owner}}</strong> 
+                        <span class="text-muted">{{ comment.comment }}</span>
                     </div>
                 </div>
                 {% empty %}
                 <p class="ml-3">No comments here yet</p>
                 {% endfor %}
                 <hr style="width:96%; margin-top:84%;">
-                <div id="like-section">
+                <div id="">
+                    <i class="fas fa-home"></i>
+                    <form action="" method="POST">
+                        {%csrf_token%}
+                        <div class="row">
+                            <div class="col-md-8">
+                                <textarea name="comment" id="" cols="30" rows="10" placeholder="comment"></textarea> 
+                            </div>
+                            <div class="col-md-4">
+                                <input class='btn' type="submit" value="Post">
+                            </div>
+                        </div>
+
+                    </form>
+                   
+                    
                 </div>
             </div>
             <div class="col-md-1"></div>
