--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,8 @@
         integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
         crossorigin="anonymous">
     </script>
+
+    <script src="https://use.fontawesome.com/00f3447240.js" defer></script>
     
     {%block styles%}
     <link rel="stylesheet" href="{%static 'css/style.css'%}">
