--- a/gram_app/templates/gram_app/comments.html
+++ b/gram_app/templates/gram_app/comments.html
@@ -10,18 +10,31 @@
                 <img src="{{image.image.url}}" style="visibility: hidden;" class="card-img" width="100%"/>
             </div>
             <div class="col-md-3 mt-2">
-                <img src="{{image.owner.profile_photo.url}}" class="rounded-circle border ml-3 mt-2  mr-3"
-                    alt="{{image.owner}}" width="35" height="35">
+                <div class="row">
+                    <div class="col-md-2">
+                        <img src="{{image.owner.profile_photo.url}}" class="rounded-circle border ml-3 mt-2  mr-3" alt="{{image.image_name}}" width="35" height="35">
+                    </div>
+                    <div class="col-md-10 mt-3">
+                        <strong class="pt-"><small>{{ image.owner |lower}}</small></strong> 
+                    </div>
+                   
+                  
+                </div>
+               
                 <hr style="width:96%">
                 {% for comment in image.comments.all %}
                 <div class="comment">
                     <div class="ml-2">
                         <strong>{{ comment.owner}}</strong> 
                         <span class="text-muted">{{ comment.comment }}</span>
+                        <p>
+                            <small><span class="text-muted">{{ comment.created | timesince }}</span></small>
+                        </p>
+                       
                     </div>
                 </div>
                 {% empty %}
-                <p class="ml-3">No comments here yet</p>
+                <p class="ml-3">Be the first to comment</p>
                 {% endfor %}
                 <hr style="width:96%; margin-top:84%;">
                 <div id="">
