--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,7 +54,9 @@ textarea{
 .white{
     background-color: white !important;
 }
-
+.blue{
+    color: #0295f6 !important;
+}
 
 @media (max-width:767.98px) {
     .search-form{
