--- a/templates/nav.html
+++ b/templates/nav.html
@@ -18,7 +18,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            Profile
+                            Account
                         </a>
     
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
