--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,9 @@
     <title>Gram</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <link href="{% static 'fontawesomefree/css/all.min.css' %}" rel="stylesheet" type="text/css"> 
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous" defer>
@@ -28,7 +31,7 @@
         crossorigin="anonymous">
     </script>
 
-    <script src="https://use.fontawesome.com/00f3447240.js" defer></script>
+    <script src="{% static 'fontawesomefree/js/all.min.js' %}"></script>    
     
     {%block styles%}
     <link rel="stylesheet" href="{%static 'css/style.css'%}">
