image uplaod and diplsy ing on homepage succes fule

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -61,5 +61,9 @@ textarea{
 @media (max-width:767.98px) {
     .search-form{
         display: none !important;
+
+    }
+    #home-profile{
+        display: none !important;
     }
 }
