--- a/gram_app/templates/gram_app/comments.html
+++ b/gram_app/templates/gram_app/comments.html
@@ -40,7 +40,19 @@
 
                     <hr style="width:96%;">
                     <div id="">
-                        <i class="fa-solid fa-heart text-danger"></i>
+                        <div class="row">
+                            <div class="col-md-1">
+                                <i class="fa-regular fa-heart fs-4"></i>
+                            </div>
+                            <div class="col-md-1">
+                                
+                                <i class="fa-regular fa-comment fs-4">
+                                    <a href="{%url 'comments' image.id%}"></a>
+                                </i>                       
+                            </div>
+                            <div class="col-md-10"></div>
+                        </div>
+                       
                         <div class="mt-1">
                             <strong>likes</strong>
                         </div>
