--- a/gram_app/templates/gram_app/index.html
+++ b/gram_app/templates/gram_app/index.html
@@ -14,9 +14,24 @@
                         <img src="{{image.owner.profile_photo.url}}" class="profile-img rounded-circle" alt="Image">
                         <small class="text-bold">{{image.owner |lower}}</small>
                     </div>
-                    <div class="p-2">
 
-                        <img src="{{image.image.url}}" class="main-img card-img-top" alt="Image">
+                    <img src="{{image.image.url}}" class="main-img card-img-top" alt="Image">
+
+                    <div class="p-3">
+                        <div class="row mt-3">
+                            <div class="col-sm-1">
+                                <i class="fa-regular fa-heart fs-4"></i>
+                            </div>
+                            <div class="col-sm-1">
+                                
+                                <i class="fa-regular fa-comment fs-4">
+                                    <a href="{%url 'comments' image.id%}"></a>
+                                </i>                       
+                            </div>
+                            <div class="col-md-10"></div>
+                        </div>
+
+
                         <h6 class="mt-3">{{image.likes}} likes</h6>
                         <p class="">
                             <strong>{{image.owner |lower}}</strong> &nbsp;{{image.image_caption |lower}}
@@ -38,13 +53,11 @@
             </div>
 
             <!-- PROFILE SECTION -->
-
-            <div class="col-md-3">
+            <div class="col-md-3" id="home-profile">
                 <a href="{%url 'profile'%}">
                     <img src="{{profile_info.profile_photo.url}}" class="prof-img rounded-circle" alt="Image">
                 </a>
-            {{profile_info.name}}
-                
+                {{profile_info.name}}  
             </div>
 
         </div>
