--- a/templates/nav.html
+++ b/templates/nav.html
@@ -15,6 +15,9 @@
 
             <div class="collapse navbar-collapse ps-5 pe-5 ms-5 me-5" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{%url 'upload' %}">Upload</a>
+                      </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
