--- a/gram_app/templates/gram_app/index.html
+++ b/gram_app/templates/gram_app/index.html
@@ -13,6 +13,23 @@
                     <div class="card-header bg">
                         <img src="{{image.owner.profile_photo.url}}" class="profile-img rounded-circle" alt="Image">
                         <small class="text-bold">{{image.owner |lower}}</small>
+
+                        {%if request.user == image.owner.owner%}
+                        <div class="float-end">
+                            <div class="dropdown">
+                                <div class="dropdown-toggle" href="" id="navbarDropdown" role="button"
+                                    data-toggle="dropdown" aria-expanded="false">
+                                    <i class="fa-solid fa-ellipsis"></i>
+                                </div>
+                                
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item text-danger" href="{%url 'profile'%}">Delete</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="{%url 'logout' %}">Edit</a></li>
+                                </ul>
+                            </div>                         
+                        </div>
+                                {%endif%}
                     </div>
 
                     <img src="{{image.image.url}}" class="main-img card-img-top" alt="Image">
