--- a/gram_app/templates/gram_app/index.html
+++ b/gram_app/templates/gram_app/index.html
@@ -23,7 +23,7 @@
                                 </div>
                                 
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item text-danger" href="{%url 'profile'%}">Delete</a></li>
+                                    <li><a class="dropdown-item text-danger" href="{%url 'delete' image.id%}">Delete</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item" href="{%url 'logout' %}">Edit</a></li>
                                 </ul>
