--- a/gram_app/templates/gram_app/index.html
+++ b/gram_app/templates/gram_app/index.html
@@ -11,7 +11,9 @@
                 {%for image in images %}
                 <div class="card mb-3">
                     <div class="card-header bg">
-                        <img src="{{image.owner.profile_photo.url}}" class="profile-img rounded-circle" alt="Image">
+                        <a href="">
+                            <img src="{{image.owner.profile_photo.url}}" class="profile-img rounded-circle" alt="Image">
+                        </a>
                         <small class="text-bold">{{image.owner |lower}}</small>
 
                         {%if request.user == image.owner.owner%}
@@ -25,7 +27,7 @@
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item text-danger" href="{%url 'delete' image.id%}">Delete</a></li>
                                     <li><hr class="dropdown-divider"></li>
-                                    <li><a class="dropdown-item" href="{%url 'logout' %}">Edit</a></li>
+                                    <li><a class="dropdown-item" href="{%url 'update' image.id %}">Edit</a></li>
                                 </ul>
                             </div>                         
                         </div>
