--- a/gram_app/templates/gram_app/index.html
+++ b/gram_app/templates/gram_app/index.html
@@ -39,13 +39,17 @@
                     <div class="p-3">
                         <div class="row mt-3">
                             <div class="col-sm-1">
-                                <a href="{%url 'likes' image.id%}">
+                                <a href="{%url 'likes' image.id%}" class="text-decoration-none text-dark">
+                                    {%if class_name == 'red'%}
+                                    <i class="fa-regular fa-heart fs-4 red"></i>
+                                    {%else%}
                                     <i class="fa-regular fa-heart fs-4"></i>
+                                    {%endif%}
                                 </a>
                             </div>
 
                             <div class="col-sm-1">                            
-                                <a href="{%url 'comments' image.id%}">
+                                <a href="{%url 'comments' image.id%}" class="text-decoration-none text-dark">
                                     <i class="fa-regular fa-comment fs-4"></i>  
                                 </a>
                             </div>
@@ -88,5 +92,14 @@
 
 </div>
 
+<script type="text/javascript">
+    $(document).ready(function() {
+  
+      $(".like-btn").click(function() {
+          $(this).css("color", "red");
+      });
+  
+    });
+  </script>
 
 {%endblock%}
