follows and unfollows displayed on the profile section

--- a/gram_app/templates/gram_app/index.html
+++ b/gram_app/templates/gram_app/index.html
@@ -31,6 +31,21 @@
                                 </ul>
                             </div>                         
                         </div>
+                        {%else%}
+                        <div class="float-end">
+                            <div class="dropdown">
+                                <div class="dropdown-toggle" href="" id="navbarDropdown" role="button"
+                                    data-toggle="dropdown" aria-expanded="false">
+                                    <i class="fa-solid fa-ellipsis"></i>
+                                </div>
+                                
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="">Follow</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="">Unfollow</a></li>
+                                </ul>
+                            </div>                         
+                        </div>
                         {%endif%}
                     </div>
 
