--- a/gram_app/templates/gram_app/profile.html
+++ b/gram_app/templates/gram_app/profile.html
@@ -27,9 +27,8 @@
                             </div>
                             <div class="row mt-3">
                                 <div class="col-md-12 row">
-                                    <p class="col-md-4">Following </p>
-                                    <div class="col-md-4"></div>
-                                    <p class="col-md-4 ">Followers</p>
+                                    <p class="col-md-6">{{ following_count }} Following </p>
+                                    <p class="col-md-6 ">{{ followers_count }} Followers</p>
                                 </div>
                             </div>
                         </div>
