following nand followers woking succesfully and reflectin gon profile section

--- a/gram_app/templates/gram_app/index.html
+++ b/gram_app/templates/gram_app/index.html
@@ -40,9 +40,9 @@
                                 </div>
                                 
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="">Follow</a></li>
+                                    <li><a class="dropdown-item" href="{%url 'follow' image.owner.id%}">Follow</a></li>
                                     <li><hr class="dropdown-divider"></li>
-                                    <li><a class="dropdown-item" href="">Unfollow</a></li>
+                                    <li><a class="dropdown-item" href="{%url 'unfollow' image.owner.id%}">Unfollow</a></li>
                                 </ul>
                             </div>                         
                         </div>
