--- a/gram_app/templates/gram_app/comments.html
+++ b/gram_app/templates/gram_app/comments.html
@@ -40,22 +40,14 @@
 
                     <hr style="width:96%;">
                     <div id="">
-                        <div class="row">
-                            <div class="col-md-1">
-                                <i class="fa-regular fa-heart fs-4"></i>
-                            </div>
-                            <div class="col-md-1">
-                                
-                                <i class="fa-regular fa-comment fs-4">
-                                    <a href="{%url 'comments' image.id%}"></a>
-                                </i>                       
-                            </div>
-                            <div class="col-md-10"></div>
+                        
+
+                        <div class="">
+                            <h6 class="mt-3">{{image.likes}} likes</h6>
+  
                         </div>
-                       
-                        <div class="mt-1">
-                            <strong>likes</strong>
-                        </div>
+
+
                         <form action="" method="POST">
                             {%csrf_token%}
                             <div class="row">
