--- a/templates/nav.html
+++ b/templates/nav.html
@@ -25,6 +25,11 @@
     
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="{%url 'profile'%}">Profile</a></li>
+
+                            {%if request.user.is_superuser%}
+                            <li><a class="dropdown-item" href="/admin">Admin Dashboard</a></li>
+                            {%endif%}
+
                             <li><hr class="dropdown-divider"></li>
                             {%if request.user.is_authenticated%}
                             <li><a class="dropdown-item" href="{%url 'logout' %}">Logout</a></li>
